--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,16 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext js,json --exec node src/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "type": "commonjs",
   "dependencies": {
-    "express": "^4.21.0",
-    "nodemon": "^3.1.6"
+    "express": "^4.21.2"
   }
 }
